--- a/.azuredevops/pipelines/templates/build.yaml
+++ b/.azuredevops/pipelines/templates/build.yaml
@@ -20,24 +20,22 @@ jobs:
 - job:
   displayName: ${{ parameters.jobDisplayName }} # Template Parameter
   variables:
-    dotNetVersion: 8.x
+    dotNetVersion: 8.0.412
     buildConfiguration: Release
-    entryProject: $(Build.Repository.LocalPath)/src/${{ parameters.appName }}/${{ parameters.appName }}.csproj
+    entryProject: $(Build.Repository.LocalPath)/${{ parameters.appName }}/${{ parameters.appName }}.csproj
     outputDirectory: $(Build.ArtifactStagingDirectory)/output
-  
-  steps:
-    - task: UseDotNet@2
-      displayName: Install .NET SDK
-      inputs:
-        packageType: 'sdk'
-        version: '6.x'
-        performMultiLevelLookup: true  # Ensure the right version is used
 
+  steps:
     - task: AzureKeyVault@2
       displayName: Access Azure Key Vault
       inputs:
         azureSubscription: ${{ parameters.azServicePrincipal }} # Template Parameter
         KeyVaultName: ${{ parameters.azKeyVaultName }} # Template Parameter
+
+    - task: UseDotNet@2
+      displayName: Install Dotnet
+      inputs:
+        version: $(dotNetVersion)   # ✅ This now uses the pinned 6.0.414 version
 
     - task: qetza.replacetokens.replacetokens-task.replacetokens@3
       displayName: Replace tokens
@@ -49,23 +47,7 @@ jobs:
         targetFiles: |
           **/appsettings.json
           **/NuGet.Config
-    
-    - task: NuGetAuthenticate@1
-      displayName: "Authenticate with NuGet"
 
-    - script: |
-       echo "Clearing NuGet Cache..."
-       dotnet nuget locals all --clear
-      displayName: "Clear NuGet Cache"
-
-    - task: DotNetCoreCLI@2
-      displayName: Restore Dependencies
-      inputs:
-        command: restore
-        projects: "**/*.csproj"
-        feedsToUse: config
-        nugetConfigPath: $(Build.SourcesDirectory)/NuGet.Config  # Ensure NuGet.Config is in the repository
-    
     - task: AdvancedSecurity-Codeql-Init@1
       displayName: Advance Security Init
       inputs:
@@ -76,9 +58,6 @@ jobs:
 
     - task: AdvancedSecurity-Codeql-Autobuild@1
       displayName: Advance Security Build Scan
-      inputs:
-        autobuild: false  # Disable AutoBuild
-        buildCommands:
 
     - task: AdvancedSecurity-Codeql-Analyze@1
       displayName: Advance Security Analyze
@@ -92,7 +71,6 @@ jobs:
         projectKey: ${{ parameters.sonarProjectKey }} # Template Parameter
         projectName: ${{ parameters.sonarProjectName }} # Template Parameter
         extraProperties: |
-          sonar.projectKey=${{ parameters.sonarProjectKey }}
           sonar.exclusions=**/obj/**,**/bin/**,**/*.dll
 
     - task: UseDotNet@2
@@ -126,37 +104,18 @@ jobs:
       inputs:
         pollingTimeoutSec: 300
 
-       # ✅ Ensure Output Directory Exists
-    - script: |
-        echo "Ensuring Output Directory Exists..."
-        if not exist "$(Build.ArtifactStagingDirectory)/output" mkdir "$(Build.ArtifactStagingDirectory)/output"
-      displayName: "Ensure Output Directory Exists"
-
-    # ✅ Dotnet Publish Step (Fix Output Path)
     - task: DotNetCoreCLI@2
       displayName: Dotnet Publish
       inputs:
         command: publish
-        publishWebProjects: True
-        arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)/output'
-        zipAfterPublish: False  # Disabled since we are manually zipping
+        arguments: $(entryProject) -c $(buildConfiguration) -o $(outputDirectory)  # Inline Variable
+        modifyOutputPath: true
+        zipAfterPublish: true
+        publishWebProjects: false
 
-    # ✅ Manually Zip Output Instead of Using `zipAfterPublish`
-    - script: |
-        echo "Creating output.zip manually..."
-        powershell Compress-Archive -Path "$(Build.ArtifactStagingDirectory)/output/*" -DestinationPath "$(Build.ArtifactStagingDirectory)/output/output.zip"
-      displayName: "Manually Zip Output"
-
-    # ✅ Check If `output.zip` Exists Before Publishing
-    - script: |
-        echo "Checking if output.zip exists..."
-        dir "$(Build.ArtifactStagingDirectory)/output" /A /B /S
-      displayName: "Debug: Verify output.zip after publish"
-
-    # ✅ Publish Build Artifacts (Fixed Path)
     - task: PublishBuildArtifacts@1
       displayName: Publish Build Artifacts
       inputs:
-        PathtoPublish: $(Build.ArtifactStagingDirectory)/output  # Ensuring correct folder
+        PathtoPublish: $(outputDirectory)  # Inline Variable
         ArtifactName: drop
         publishLocation: Container
