--- a/ftodashboard/ftodashboard.csproj
+++ b/ftodashboard/ftodashboard.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
+		<TargetFramework>net8.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<UseRazorSourceGenerator>false</UseRazorSourceGenerator>
 		<UserSecretsId>aspnet-ftodashboard-7B3C57CE-D4FF-4847-9291-3519D931EB2C</UserSecretsId>
@@ -37,39 +37,26 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.2.2" />
-		<PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.4.0" />
-		<PackageReference Include="Azure.Storage.Blobs" Version="12.15.0" />
-		<PackageReference Include="Azure.Storage.Files.Shares" Version="12.13.0" />
-		<PackageReference Include="Azure.Storage.Queues" Version="12.13.0" />
-		<PackageReference Include="coverlet.collector" Version="3.2.0">
-			<PrivateAssets>all</PrivateAssets>
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		<PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.4.0" />
+		<PackageReference Include="Azure.Identity" Version="1.14.1" />
+		<PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.8.0" />
+		<PackageReference Include="Azure.Storage.Blobs" Version="12.24.1" />
+		<PackageReference Include="Azure.Storage.Common" Version="12.23.0" />
+		<PackageReference Include="coverlet.collector" Version="6.0.4">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Microsoft.ApplicationInsights" Version="2.21.0" />
-		<PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.0" />
-		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.14" NoWarn="NU1605" />
-		<PackageReference Include="Microsoft.AspNetCore.Authentication.Negotiate" Version="6.0.14" />
-		<PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.13" NoWarn="NU1605" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.14" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.14">
-			<PrivateAssets>all</PrivateAssets>
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
-		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.14" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.14">
-			<PrivateAssets>all</PrivateAssets>
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
-		<PackageReference Include="Microsoft.Extensions.Azure" Version="1.6.0" />
-		<PackageReference Include="Microsoft.Extensions.Logging.AzureAppServices" Version="6.0.14" />
-		<PackageReference Include="Microsoft.Graph" Version="5.24.0" />
-		<PackageReference Include="Microsoft.Identity.Web" Version="2.5.0" />
-		<PackageReference Include="Microsoft.Identity.Web.GraphServiceClient" Version="2.13.3" />
-		<PackageReference Include="Microsoft.Identity.Web.UI" Version="2.5.0" />
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
-		<PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.1" />
-		<PackageReference Include="Telerik.UI.for.Blazor" Version="3.6.1" />
+		<PackageReference Include="Microsoft.ApplicationInsights" Version="2.23.0" />
+		<PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.23.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="8.0.18" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.7" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.7" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.7" />
+		<PackageReference Include="Microsoft.Identity.Web" Version="3.10.0" />
+		<PackageReference Include="Microsoft.Identity.Web.MicrosoftGraph" Version="3.10.0" />
+		<PackageReference Include="Microsoft.Identity.Web.UI" Version="3.10.0" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="Telerik.UI.for.Blazor" Version="6.2.0" />
 	</ItemGroup>
 
 	<ItemGroup>
